[package]
name = "legionlight_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
circular_vec = {git = "https://github.com/Supernovatux/circular_vec"}
hex_color = {version = "2.0.0",features = ["serde"] }
hyprland = "0.3.9"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = "1.32.0"
